<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_Home" />
        <item
            android:id="@+id/nav_oxygen"
            android:icon="@drawable/ic_water_percent"
            android:title="@string/title_oximeter" />
        <item
            android:id="@+id/nav_blood_pressure"
            android:icon="@drawable/ic_heart_box_outline"
            android:title="@string/title_blood_pressure" />
        <item
            android:id="@+id/nav_weight"
            android:icon="@drawable/ic_weight_kilogram"
            android:title="@string/title_scale" />
    </group>


       <item android:title="@string/action_settings">
           <menu>
               <item
                   android:id="@+id/nav_setting"
                   android:icon="@drawable/ic_settings_black_24dp"
                   android:title="@string/action_settings">
               </item>
           </menu>

       </item>


</menu>
