<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="esir.sem2.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:background="@drawable/window_shape"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourPseudoTxtView"
                android:textSize="24sp"/>
            <ViewSwitcher
                android:id="@+id/pseudo_ViewSwitcher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/profile_pseudo"
                    android:textSize="24sp"/>
                <EditText
                    android:id="@+id/Name_value_profile"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/profile_pseudo"
                    android:textSize="24sp"
                    />
            </ViewSwitcher>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourSizeTxtView"
                android:textSize="24sp"/>
            <ViewSwitcher
                android:id="@+id/height_ViewSwitcher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/profile_height"
                    android:textSize="24sp"/>
                <EditText
                    android:id="@+id/height_value_profile"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/profile_height"
                    android:textSize="24sp"
                    />
            </ViewSwitcher>
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_height_unit"
                android:textSize="24sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourAgeTxtView"
                android:textSize="24sp"/>
            <ViewSwitcher
                android:id="@+id/age_ViewSwitcher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/profile_age"
                    android:textSize="24sp"/>
                <EditText
                    android:id="@+id/age_value_profile"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/profile_age"
                    android:textSize="24sp"
                    />
            </ViewSwitcher>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourGenderTxtView"
                android:textSize="24sp"/>
            <ViewSwitcher
                android:id="@+id/gender_ViewSwitcher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/profile_gender"
                    android:textSize="24sp"/>
                <Spinner
                    android:id="@+id/gender_value_profile"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/profile_gender"
                    android:textSize="24sp"
                    />
            </ViewSwitcher>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/athleticTxtView"
                android:textSize="24sp"/>
            <ViewSwitcher
                android:id="@+id/athletic_ViewSwitcher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/profile_athletic_value"
                    android:textSize="24sp"/>
                <Spinner
                    android:id="@+id/athletic_value_profile"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/profile_athletic_value"
                    android:textSize="24sp" />

            </ViewSwitcher>
        </LinearLayout>




    </LinearLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button
               android:visibility="gone"
               android:id="@+id/ConfirmBtn_profile"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/window_shape"
               android:textColor="@color/colorPrimaryDark"
               android:layout_centerHorizontal="true"
               android:text="@string/confirm"/>
       </RelativeLayout>

    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
