<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aplot="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="30"
    tools:context="esir.sem2.BMIActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >

        <RadioButton
            android:id="@+id/radioButtonYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot_year_sel" />
        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot_month_sel" />
        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/plot_week_sel" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginTop="10dp"
        android:background="@drawable/window_shape"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_scale" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/weight_unitTextView_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/weight_main"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/weight_unit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/weight_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/weight_unitTextView_main"
                android:text="100"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/weight_TxtView_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/weight_main"
                android:paddingEnd="5dp"
                android:text="@string/weight_string" />

            <TextView
                android:id="@+id/imc_Value_TxtView_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/weight_TxtView_main"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:text="20"
                android:textColor="@color/nephritis_green_color"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/imc_TxtView_main"
                style="@style/ThemeOverlay.AppCompat.ActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/weight_TxtView_main"
                android:layout_alignBottom="@+id/weight_TxtView_main"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imc_Value_TxtView_main"
                android:text="@string/BMI_string" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
